Texture flickering when selecting in solid viewport / AMD Navi RX 5700 series #69377

Closed
opened 2019-09-01 13:38:24 +02:00 by Andreas Lutsch · 17 comments

System Information
Operating system: Windows-10-10.0.18362 64 Bits
Graphics card: AMD Radeon RX 5700 XT ATI Technologies Inc. 4.5.13571 Core Profile Context 19.8.2 26.20.13001.40003

Blender Version
Broken: version: 2.81 (sub 4), branch: master, commit date: 2019-09-01 07:31, hash: ae43b1d51b
Worked: 2.80 Stable

Short description of error
The texture flickers in solid viewport shading with texture on while selecting with circle select in vertex or edge mode.

6QEmPJq0ZS.mp4

Also if you use a mirror modifier (or probably other modifiers too) even with any type of selection the texture flickers.

xf4IPvcr8R.mp4

Exact steps for others to reproduce the error

  1. Create a texture and draw something on the basic cube
  2. Go into edit mode and turn on texture in solid viewport shading
  3. Use the circle select tool and change from vertex to edge mode when selecting.

cube.blend

**System Information** Operating system: Windows-10-10.0.18362 64 Bits Graphics card: AMD Radeon RX 5700 XT ATI Technologies Inc. 4.5.13571 Core Profile Context 19.8.2 26.20.13001.40003 **Blender Version** Broken: version: 2.81 (sub 4), branch: master, commit date: 2019-09-01 07:31, hash: `ae43b1d51b` Worked: 2.80 Stable **Short description of error** The texture flickers in solid viewport shading with texture on while selecting with circle select in vertex or edge mode. [6QEmPJq0ZS.mp4](https://archive.blender.org/developer/F7712872/6QEmPJq0ZS.mp4) Also if you use a mirror modifier (or probably other modifiers too) even with any type of selection the texture flickers. [xf4IPvcr8R.mp4](https://archive.blender.org/developer/F7712873/xf4IPvcr8R.mp4) **Exact steps for others to reproduce the error** 1. Create a texture and draw something on the basic cube 2. Go into edit mode and turn on texture in solid viewport shading 3. Use the circle select tool and change from vertex to edge mode when selecting. [cube.blend](https://archive.blender.org/developer/F7712869/cube.blend)
Author

Added subscriber: @AndreasLutsch

Added subscriber: @AndreasLutsch

Added subscriber: @nokipaike

Added subscriber: @nokipaike

I have an AMD radeon HD 7600 on windows 10 (gpu with legacy drivers and workarounds) and I don't have this flickering, it seems that it works well

I have an AMD radeon HD 7600 on windows 10 (gpu with legacy drivers and workarounds) and I don't have this flickering, it seems that it works well
Author

@nokipaike Did you try on the latest 2.81 build? It works for me well too on the 2.80 stable release, but on the nightly build, I get this weird issues. Try the cube I uploaded here with nightly 2.81, maybe add a mirror modifier, and change the vertex/edge/face selection while selecting and deselecting.

@nokipaike Did you try on the latest 2.81 build? It works for me well too on the 2.80 stable release, but on the nightly build, I get this weird issues. Try the cube I uploaded here with nightly 2.81, maybe add a mirror modifier, and change the vertex/edge/face selection while selecting and deselecting.

@AndreasLutsch yes I only investigated blender 2.81, usually only check in the latest builds, and in the case, in official builds check if bugs existed before

here i think i know what happens, in my gpu it works because there are workarounds (same blender 2.80 code), while in your gpu, changes have been made somewhere that trigger this bug.

@AndreasLutsch yes I only investigated blender 2.81, usually only check in the latest builds, and in the case, in official builds check if bugs existed before here i think i know what happens, in my gpu it works because there are workarounds (same blender 2.80 code), while in your gpu, changes have been made somewhere that trigger this bug.
Author

You're right, it seems I have this bug only on my PC with the AMD RX 5700 XT, on my laptop with Intel UHD 620 I don't have this issue.

You're right, it seems I have this bug only on my PC with the AMD RX 5700 XT, on my laptop with Intel UHD 620 I don't have this issue.
Andreas Lutsch changed title from Texture flickering when selecting to Texture flickering when selecting in solid viewport / AMD Navi RX 5700 series 2019-09-09 09:45:48 +02:00
Author

Here is my system info and gpu debug of blender.

system-info.txt

GPU Debug.txt

Here is my system info and gpu debug of blender. [system-info.txt](https://archive.blender.org/developer/F7726737/system-info.txt) [GPU Debug.txt](https://archive.blender.org/developer/F7726736/GPU_Debug.txt)
Member

Added subscriber: @Jeroen-Bakker

Added subscriber: @Jeroen-Bakker
Member

Hi @AndreasLutsch

I am not able to reproduce this issue yet. Could you in the meantime update your graphics drivers to the latest version and see if that solves you problem?

Hi @AndreasLutsch I am not able to reproduce this issue yet. Could you in the meantime update your graphics drivers to the latest version and see if that solves you problem?
Jeroen Bakker self-assigned this 2019-09-12 14:22:13 +02:00
Member

Aw wait am able to reproduce it on Linux with an AMD Vega 64.

Aw wait am able to reproduce it on Linux with an AMD Vega 64.
Member

First bad commit is c3d037e88f
Other issue that might be related is

  • switching rendering engines during circle select doesn't render textures.
First bad commit is c3d037e88f Other issue that might be related is * switching rendering engines during circle select doesn't render textures.
Author

Could you in the meantime update your graphics drivers to the latest version and see if that solves you problem?

The newest driver 19.9.2 with the latest 2.81 build still has the issue.

> Could you in the meantime update your graphics drivers to the latest version and see if that solves you problem? The newest driver 19.9.2 with the latest 2.81 build still has the issue.

Added subscriber: @fclem

Added subscriber: @fclem

Ok the bug is caused by glBufferData inside DRW_instance_buffer_finish > GPU_vertbuf_use but only after the selection code which resets the number of items in idatalist->pool_buffers.
I don't understand why this is happening as the vbo ids are all valid and no error is reported. What is even more strange, is that it affects another vbo which has no connection with the ones in DRW_instance_buffer_finish.

I will commit a workaround, but this bug might appear again from somewhere else (I couldn't figure a way to when I tried).

Ok the bug is caused by `glBufferData` inside `DRW_instance_buffer_finish > GPU_vertbuf_use` but only after the selection code which resets the number of items in `idatalist->pool_buffers`. I don't understand why this is happening as the vbo ids are all valid and no error is reported. What is even more strange, is that it affects another vbo which has no connection with the ones in DRW_instance_buffer_finish. I will commit a workaround, but this bug might appear again from somewhere else (I couldn't figure a way to when I tried).

This issue was referenced by df3891ed81

This issue was referenced by df3891ed817ff7b4bc8ba1c4c313f0fc2df8eb1f

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author

There are still some issues when using the mirror modifier, when you turn off adjust on cage, the issue is present, but with both displaying modifier in edit mode and adjust on cage, it's fine.

DqKgVT7p27.mp4

There are still some issues when using the mirror modifier, when you turn off adjust on cage, the issue is present, but with both displaying modifier in edit mode and adjust on cage, it's fine. [DqKgVT7p27.mp4](https://archive.blender.org/developer/F7778329/DqKgVT7p27.mp4)
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#69377
No description provided.